# Bringing-the-Dual-LLM-Pattern-to-Practice-in-Google-ADK

./: .env.example  Dockerfile  README.MD  docker-compose.yml  pyproject.toml
benchmarks/banking/: policy.py  tools.py
benchmarks/slack/: policy.py  tools.py
benchmarks/travel/: policy.py  tools.py
benchmarks/workspace/: policy.py  tools.py
scripts/: run_benchmark.py  run_slack.py  run_travel.py  run_workspace.py  start_qllm.py
src/adk_dual_llm/core/: privileged_agent.py  quarantined_agent.py  server.py
src/adk_dual_llm/security/: handle_manager.py  handle_plugin.py  key_plugin.py
